add link to github

--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
         <div class="btn equal bg-orange">=</div>
       </div>
     </div>
+    <footer>
+      <p><a href="https://github.com/KozlitinaNatalia/calculator" target="_blank">Open source code</a> by Nataliia Kozlitina</p>
+  </footer>
   </body>
 </html>
